# kolorz

./: .gitignore  README.md  pyproject.toml
kolorz/: __init__.py  cli.py  colors.py  kolor.py
