[tool.poetry]
name = "kolorz"
version = "0.2.3"
description = "A fast, extensible, and kolorful python library to print colored output to the terminal"
authors = ["dotzenith <contact@danshu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dotwiz = "^0.3.1"

[tool.poetry.scripts]
kolorz = "kolorz.cli:kolor"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
